# iam-agent-proxy

./: .gitignore  BLOG.md  BLOG.md.local-draft  CLAUDE.md  DESIGN.md  README.md  dev_setup.sh  docker-compose.yml  get_policy.py  iam_agent_proxy.py  proxy_creds.py  pyproject.toml  pytest.ini  setup_venv.sh  start_proxy.sh  test_resign.sh
core/: __init__.py  _creds.py  _policy.py  _proxy.py  addon.py  credentials.py  models.py  sigv4.py  upstream_creds.py
docker/proxy/: Dockerfile
docs/: edit_iam_identity_center_roles.md
iam_agent_proxy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
proxy/: __init__.py  addon.py  allowlist.py  exceptions.py  recorder.py  resolver.py
tests/: conftest.py  test_addon.py  test_allowlist.py  test_credentials.py  test_exceptions.py  test_models.py  test_recorder.py  test_resolver.py  test_sigv4.py  test_upstream_creds.py
tests/integration/: README.md  docker-compose.yml  elhaz.py  test_elhaz.py  test_resign.sh
tests/integration/docker/agent/: Dockerfile
tests/integration/docker/proxy/: Dockerfile
